overflow bug fixed

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -45,7 +45,10 @@ $second-font: 'Overpass', sans-serif;
 body{
     overflow-x: hidden;
 }
-
+.full{
+    position: relative;
+    overflow-x: hidden;
+}
 //Blogr
 
 //Section1
